Fix section title alignment in heirarchy mode

--- a/core/src/main/web/app/styles/hierarchy.scss
+++ b/core/src/main/web/app/styles/hierarchy.scss
@@ -58,6 +58,7 @@
   .bk-section-title {
     top: 5px;
     position: relative;
+    display: inline-block;
   }
 }
 
